--- a/app/src/main/res/layout/note_elem_audio_playback.xml
+++ b/app/src/main/res/layout/note_elem_audio_playback.xml
@@ -1,114 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/noteElemAudio"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center_horizontal"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp"
+    android:layout_marginTop="20dp"
+    android:animateLayoutChanges="true"
+    android:background="@drawable/list_item_shape"
     android:orientation="vertical">
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:paddingTop="20dp">
+        android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/btnStart"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:clickable="true"
+            android:focusable="true"
+            android:foreground="?selectableItemBackgroundBorderless"
+            android:src="@drawable/ic_action_play_dark" />
+
+        <ImageView
+            android:id="@+id/btnPause"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:clickable="true"
+            android:focusable="true"
+            android:foreground="?selectableItemBackgroundBorderless"
+            android:src="@drawable/ic_action_pause_dark"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/songTime"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/rec_countet"
+            android:textSize="19sp"
+            android:textStyle="normal" />
+
+        <ImageView
+            android:id="@+id/del"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/list_item_shape"
-            android:gravity="center_horizontal"
-            android:orientation="vertical">
+            android:clickable="true"
+            android:focusable="true"
+            android:foreground="?selectableItemBackgroundBorderless"
+            android:paddingBottom="3dp"
+            android:paddingEnd="6dp"
+            android:paddingLeft="6dp"
+            android:paddingRight="3dp"
+            android:paddingStart="6dp"
+            android:paddingTop="3dp"
+            android:src="@drawable/del_btn" />
+    </LinearLayout>
 
 
-
-            <LinearLayout
-                android:id="@+id/hidable"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <TextView
-                    android:id="@+id/songTime"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:paddingLeft="40dp"
-                    android:paddingRight="40dp"
-                    android:text="@string/rec_countet"
-                    android:textColor="@color/red"
-                    android:textSize="19sp"
-                    android:textStyle="normal" />
-
-                <SeekBar
-                    android:id="@+id/seekBar1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1" />
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_horizontal"
-                        android:padding="7dp">
-
-                        <ImageView
-                            android:id="@+id/btnPrev"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:clickable="true"
-                            android:src="@drawable/media_previous" />
-
-                        <ImageView
-                            android:id="@+id/btnStop"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:clickable="true"
-                            android:src="@drawable/media_stop" />
-
-                        <ImageView
-                            android:id="@+id/btnNext"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:clickable="true"
-                            android:src="@drawable/media_next" />
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:layout_marginLeft="30dp"
-                            android:layout_marginTop="1dp">
-
-                            <ImageView
-                                android:id="@+id/btnShuffle"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center_horizontal"
-                                android:clickable="true"
-                                android:visibility="visible" />
-
-                            <ImageView
-                                android:id="@+id/btnRepeat"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:layout_gravity="center_horizontal"
-                                android:clickable="true"
-                                android:visibility="visible" />
-                        </LinearLayout>
-                    </LinearLayout>
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-        </LinearLayout>
-    </FrameLayout>
-
+    <SeekBar
+        android:id="@+id/seekBar"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_margin="8dp"
+        android:layout_weight="1"
+        android:visibility="gone"
+        tools:visibility="visible" />
 </LinearLayout>
