--- a/app/src/main/res/layout/note_elem_pic.xml
+++ b/app/src/main/res/layout/note_elem_pic.xml
@@ -1,52 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="center_horizontal"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp"
+    android:layout_marginTop="20dp"
     android:clickable="true"
     android:focusable="true"
-    android:foreground="?selectableItemBackground"
-    android:orientation="vertical">
+    android:foreground="?selectableItemBackground">
 
-    <FrameLayout
+    <View
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/list_item_shape" />
+
+    <ImageView
+        android:id="@+id/contentView"
+        android:layout_width="match_parent"
+        android:layout_height="300dp" />
+
+    <ImageView
+        android:id="@+id/del"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:paddingTop="20dp">
-
-        <LinearLayout
-            android:id="@+id/picLayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/list_item_shape"
-            android:orientation="vertical">
-
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <ImageView
-                    android:id="@+id/contentView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
-                    android:minHeight="220dp" />
-
-                <ImageView
-                    android:id="@+id/del"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right"
-                    android:clickable="true"
-                    android:padding="4sp"
-                    android:src="@drawable/del_btn" />
-
-            </FrameLayout>
-        </LinearLayout>
-
-    </FrameLayout>
-
-</LinearLayout>
+        android:layout_gravity="end"
+        android:padding="4dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:src="@drawable/del_btn" />
+</FrameLayout>
