--- a/app/src/main/res/layout/link_content.xml
+++ b/app/src/main/res/layout/link_content.xml
@@ -12,7 +12,7 @@
         android:layout_width="0dp"
         android:layout_height="100dp"
         android:layout_weight="1"
-        android:scaleType="centerCrop" />
+        android:scaleType="centerInside" />
 
     <LinearLayout
         android:id="@+id/info_wrap"
