--- a/app/src/main/res/layout/note_elem_note.xml
+++ b/app/src/main/res/layout/note_elem_note.xml
@@ -48,7 +48,7 @@
             android:layout_margin="10dp"
             android:layout_weight="1"
             android:autoLink="web"
-            android:inputType="textNoSuggestions"
+            android:inputType="text"
             android:paddingBottom="20dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
