--- a/app/src/main/res/layout/note_elem_pic.xml
+++ b/app/src/main/res/layout/note_elem_pic.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -15,18 +16,21 @@
         android:layout_height="match_parent"
         android:background="@drawable/list_item_shape" />
 
-    <ImageView
+    <com.makeramen.roundedimageview.RoundedImageView
+        android:minHeight="300dp"
         android:id="@+id/contentView"
         android:layout_width="match_parent"
-        android:layout_height="300dp" />
+        android:layout_height="wrap_content"
+        android:scaleType="centerCrop"
+        app:riv_corner_radius="20dp" />
 
     <ImageView
         android:id="@+id/del"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
-        android:padding="4dp"
         android:clickable="true"
         android:focusable="true"
+        android:padding="4dp"
         android:src="@drawable/del_btn" />
 </FrameLayout>
